instructions.Instructions.scala.code
baisseBrosse()
avance(2)
droite()
avance(nbPas:2)
droite()
avance(nbPas:2)
droite()
avance(nbPas:2)
droite()
avance()
droite()
leveBrosse()
avance()